sql/sql_lex.h
@@ -1237,6 +1237,8 @@ typedef struct st_lex : public Query_tables_list
     context_stack.pop();
   }
 
+  bool copy_db_to(char **p_db, uint *p_db_length) const;
+
   Name_resolution_context *current_context()
   {
     return context_stack.head();
